--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,9 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-markdown: kramdown
+# markdown: kramdown
+markdown: redcarpet
 
 # my custom define
 permalink: none
+highlighter: rouge
