--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-# markdown: kramdown
-markdown: redcarpet
+markdown: kramdown
 
 # my custom define
 permalink: none
