--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
   # line in _config.yml. It will appear in your document head meta (for
   # Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://iyujian.github.io" # the base hostname & protocol for your site
+url: "http://www.iyujian.me" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
@@ -22,6 +22,8 @@ markdown: kramdown
 
 # my custom define
 permalink: none
+
+# gems: [jekyll-paginate]
 
 # paginate
 paginate: 10
